--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Hyper Casual project.sln"
+    "dotnet.defaultSolution": "Hyber_Causual_Project.sln"
 }
